Add categories to all posts\nexplictly use an old date to prevent destroying updated_at

--- a/source/_posts/洛谷一些题.md
+++ b/source/_posts/洛谷一些题.md
@@ -2,6 +2,7 @@
 title: 洛谷一些题
 date: 2019-11-09 19:14:57
 tags: 公众号同步推送
+categories: 教学
 ---
 # 大概每日N题(非课内难度)
 ~~被工大杯的各位julao打击到了的~~L同学决定~~大概~~每天刷题, ~~绝对不咕~~, 如果没有人问课内的问题的话就在这里写点竞赛难度的题吧.
