--- a/source/_posts/2020工大杯题解-A.md
+++ b/source/_posts/2020工大杯题解-A.md
@@ -1,10 +1,15 @@
 ---
 title: 2020工大杯题解 - A - I同学的课间
 date: 2020-11-02 16:16:38
-tags: OI 工大杯 题解 公众号同步推送
+tags: 
+	- OI 
+	- 工大杯
+	- 题解
+	- 公众号同步推送
+mathjax: true
 ---
 
-** 个人题解，和比赛官方无关，仅供参考 **
+**个人题解，和比赛官方无关，仅供参考**
 
 # 2020工大杯题解 - A - I同学的课间
 
