--- a/source/_posts/蓝桥杯模拟题解-1.md
+++ b/source/_posts/蓝桥杯模拟题解-1.md
@@ -1,11 +1,15 @@
 ---
 title: 蓝桥杯模拟题解-1
 date: 2020-03-16 21:12:08
-tags: OI 竞赛 ICPC
+tags:
+	- OI
+	- 竞赛
+	- ICPC
 ---
 # 蓝桥杯校内模拟赛题解-1
 
 ### 1. 在计算机存储中，15.125GB是多少MB？
+
 #### 答案提交
 
 这是一道结果填空的题，你只需要算出结果后提交即可。
